@startuml

title __NOTIFICATION's Class Diagram__\n

  namespace learningapp {
    namespace dtos {
      namespace notification {
        class learningapp.dtos.notification.NotificationCreationDto {
            - message : String
            - users : List<UUID>
            + NotificationCreationDto()
            + NotificationCreationDto()
            {static} + builder()
            + getMessage()
            + getNotificationType()
            + getUsers()
            + setMessage()
            + setNotificationType()
            + setUsers()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace dtos {
      namespace notification {
        class learningapp.dtos.notification.NotificationCreationDto.NotificationCreationDtoBuilder {
            - message : String
            - users : List<UUID>
            + build()
            + message()
            + notificationType()
            + toString()
            + users()
            ~ NotificationCreationDtoBuilder()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace dtos {
      namespace notification {
        class learningapp.dtos.notification.NotificationDto {
            - creatioDate : LocalDateTime
            - id : UUID
            - message : String
            - userId : UUID
            + NotificationDto()
            + NotificationDto()
            {static} + builder()
            + getCreatioDate()
            + getId()
            + getMessage()
            + getNotificationType()
            + getUserId()
            + setCreatioDate()
            + setId()
            + setMessage()
            + setNotificationType()
            + setUserId()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace dtos {
      namespace notification {
        class learningapp.dtos.notification.NotificationDto.NotificationDtoBuilder {
            - creatioDate : LocalDateTime
            - id : UUID
            - message : String
            - userId : UUID
            + build()
            + creatioDate()
            + id()
            + message()
            + notificationType()
            + toString()
            + userId()
            ~ NotificationDtoBuilder()
        }
      }
    }
  }
  

  learningapp.dtos.notification.NotificationCreationDto o-- learningapp.entities.notification.NotificationType : notificationType
  learningapp.dtos.notification.NotificationCreationDto +-down- learningapp.dtos.notification.NotificationCreationDto.NotificationCreationDtoBuilder
  learningapp.dtos.notification.NotificationCreationDto.NotificationCreationDtoBuilder o-- learningapp.entities.notification.NotificationType : notificationType
  learningapp.dtos.notification.NotificationDto o-- learningapp.entities.notification.NotificationType : notificationType
  learningapp.dtos.notification.NotificationDto +-down- learningapp.dtos.notification.NotificationDto.NotificationDtoBuilder
  learningapp.dtos.notification.NotificationDto.NotificationDtoBuilder o-- learningapp.entities.notification.NotificationType : notificationType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
